force-app/main/default/objects/CUSTOMER__c/CUSTOMER__c.object-meta.xml
<CustomObject>
    <label>customer</label>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>CUSTOMER ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>