force-app/main/default/objects/CUSTOMER__c/fields/candidate_name__c.field-meta.xml
<CustomField>
    <fullName>candidate_name__c</fullName>
    <label>candidate name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>