force-app/main/default/objects/CUSTOMER__c/fields/CONTINENT__c.field-meta.xml
<CustomField>
    <fullName>CONTINENT__c</fullName>
    <label>CONTINENT</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>continent</valueSetName>
    </valueSet>
</CustomField>