force-app/main/default/objects/CUSTOMER__c/fields/COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY__c</fullName>
    <label>COUNTRY</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CONTINENT__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>country_name</valueSetName>
    </valueSet>
</CustomField>