force-app/main/default/objects/CUSTOMER__c/fields/Donation_amount__c.field-meta.xml
<CustomField>
    <fullName>Donation_amount__c</fullName>
    <label>Donation amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>