force-app/main/default/objects/CUSTOMER__c/fields/HOBBY__c.field-meta.xml
<CustomField>
    <fullName>HOBBY__c</fullName>
    <label>HOBBY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>industry</valueSetName>
    </valueSet>
</CustomField>