force-app/main/default/objects/CUSTOMER__c/fields/nearest_city__c.field-meta.xml
<CustomField>
    <fullName>nearest_city__c</fullName>
    <label>nearest city</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>state_OR_UT_name__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>nearest_city</valueSetName>
    </valueSet>
</CustomField>