force-app/main/default/objects/CUSTOMER__c/fields/website__c.field-meta.xml
<CustomField>
    <fullName>website__c</fullName>
    <formula>$User.Username</formula>
    <label>website</label>
    <type>Text</type>
</CustomField>