force-app/main/default/objects/CUSTOMER__c/validationRules/donationAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>donationAmount</fullName>
    <active>true</active>
    <errorConditionFormula>Donation_amount__c    &lt;  5000</errorConditionFormula>
    <errorDisplayField>Donation_amount__c</errorDisplayField>
    <errorMessage>the donation amount should be greater than 5000</errorMessage>
</ValidationRule>